[package]
name = "mac-process"
version = "0.1.0"
edition = "2024"
description = "User-mode library for querying and verifying integrity of MacOS processes"
readme = "README.md"
repository = "https://github.com/khanhtranngoccva/mac-process"
license = "MIT"
keywords = ["macos", "process", "libproc"]
categories = ["os::macos-apis", "api-bindings", "authentication"]

[dependencies]
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
dashmap = "6.2.1"
digest = "0.11.3"
kqueue = "1.2.0"
libc = "0.2.186"
mach2 = "0.6.0"
md-5 = "0.11.0"
once_cell = "1.21.4"
ref-cast = "1.0.25"
rustix = { version = "1.1.4", features = ["fs", "process"] }
sha2 = "0.11.0"
system_error = "0.2.0"

[dev-dependencies]
tempfile = "3.27.0"

[build-dependencies]
bindgen = { version = "0.72.1", default-features = false, features = ["runtime"] }
